fix bug and do statistic
